# actix-rate-limiter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  lint.yml
examples/: README.md  memory.rs
src/: lib.rs  limit.rs  limiter.rs  middleware.rs  route.rs
src/backend/: memory.rs  mod.rs
