[package]
license = "MIT"
edition = "2021"
version = "0.1.1"
readme = "README.md"
name = "actix-rate-limiter"
authors = ["Pelfox <dev@pelfox.dev>"]
keywords = ["actix", "actix-web", "rate-limiter"]
homepage = "https://github.com/Pelfox/actix-rate-limiter"
repository = "https://github.com/Pelfox/actix-rate-limiter"
categories = ["web-programming", "web-programming::http-server"]
documentation = "https://docs.rs/actix-rate-limiter/latest/actix-rate-limiter"
description = "Simple yet powerful per-route rate-limiter for Actix with support for regex."

[dependencies]
log = "0.4.22"
regex = "1.10.5"
chrono = "0.4.38"
futures = "0.3.30"
actix-web = "4.8.0"
tokio = { version = "1.39.2", features = ["sync"] }

[dev-dependencies]
env_logger = "0.11.5"
